--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <a href="mailto:achmadtaufikhidayat27@gmail.com"><i class='bx bxl-gmail' ></i>
         <a href="https://wa.me/0895396081266" target="_blank"><i class='bx bxl-whatsapp'></i>
       </div>
-      <a href="/images/taufik cv .jpg" class="btn">Download CV</a>
+      <a href="/images/taufik.jpg" class="btn">Download CV</a>
     </div>
 
 
