--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <a href="https://wa.me/0895396081266" target="_blank"><i class='bx bxl-whatsapp'></i>
       </div>
       <a href="/images/taufik.jpg" class="btn">Download CV</a>
-
+          </div>
       <div class="home-img">
         <img src="images/topek1-removebg-preview.png">
       </div>
